protox-parse/src/snapshots/protox_parse__tests__enum_reserved_range_extrema.snap
---
source: protox-parse/src/tests.rs
expression: "parse(r#\"\n        syntax = \"proto3\";\n\n        enum Extreme {\n            ZERO = 0;\n            reserved -2147483648 to -1, 1 to 2147483647;\n        }\n        \"#)"
---
Ok(
    FileDescriptorProto {
        name: Some(
            "test.proto",
        ),
        package: None,
        dependency: [],
        public_dependency: [],
        weak_dependency: [],
        message_type: [],
        enum_type: [
            EnumDescriptorProto {
                name: Some(
                    "Extreme",
                ),
                value: [
                    EnumValueDescriptorProto {
                        name: Some(
                            "ZERO",
                        ),
                        number: Some(
                            0,
                        ),
                        options: None,
                    },
                ],
                options: None,
                reserved_range: [
                    EnumReservedRange {
                        start: Some(
                            -2147483648,
                        ),
                        end: Some(
                            -1,
                        ),
                    },
                    EnumReservedRange {
                        start: Some(
                            1,
                        ),
                        end: Some(
                            2147483647,
                        ),
                    },
                ],
                reserved_name: [],
            },
        ],
        service: [],
        extension: [],
        options: None,
        source_code_info: Some(
            SourceCodeInfo {
                location: [
                    Location {
                        path: [],
                        span: [
                            1,
                            8,
                            6,
                            9,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                        ],
                        span: [
                            3,
                            8,
                            6,
                            9,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            1,
                        ],
                        span: [
                            3,
                            13,
                            20,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            0,
                        ],
                        span: [
                            4,
                            12,
                            21,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            0,
                            1,
                        ],
                        span: [
                            4,
                            12,
                            16,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            0,
                            2,
                        ],
                        span: [
                            4,
                            19,
                            20,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            4,
                        ],
                        span: [
                            5,
                            12,
                            56,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            4,
                            0,
                        ],
                        span: [
                            5,
                            21,
                            38,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            4,
                            0,
                            1,
                        ],
                        span: [
                            5,
                            21,
                            32,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            4,
                            0,
                            2,
                        ],
                        span: [
                            5,
                            36,
                            38,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            4,
                            1,
                        ],
                        span: [
                            5,
                            40,
                            55,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            4,
                            1,
                            1,
                        ],
                        span: [
                            5,
                            40,
                            41,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            4,
                            1,
                            2,
                        ],
                        span: [
                            5,
                            45,
                            55,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            12,
                        ],
                        span: [
                            1,
                            8,
                            26,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                ],
            },
        ),
        syntax: Some(
            "proto3",
        ),
    },
)
