protox-parse/src/snapshots/protox_parse__tests__parse_field_default.snap
---
source: protox-parse/src/tests.rs
expression: "parse(\"\n        message Foo {\n            optional int32 enum = 1 [default = 2.4];\n        }\n    \")"
---
Err(
    [
        ValueInvalidType {
            expected: "an integer",
            actual: "2.4",
            span: 70..73,
        },
    ],
)
